--- a/BackEnd_VollMed/Readme
+++ b/BackEnd_VollMed/Readme
@@ -20,8 +20,71 @@ Antes de começar, verifique se você possui:
 2. Configure um usuário com permissões de leitura e escrita.  
 3. Crie um arquivo `.env` ou configure variáveis de ambiente com as informações do banco:
 
-```env
+```Aplication.Properties
 DATASOURCE_URL=jdbc:mysql://localhost:3306/vollmed_api
 DATASOURCE_USERNAME=root
 DATASOURCE_PASSWORD=sua_senha
-JWT_SECRET=segredo_supersecreto
+```
+🔹 Obs: O JWT_SECRET é usado para assinar tokens de autenticação.
+
+🔹 Rodando a Aplicação
+
+Dentro da pasta backend:
+
+# Baixar dependências e gerar o build
+mvn clean install
+
+# Rodar a aplicação
+java -jar target/api.jar
+
+
+A API estará disponível em: http://localhost:8080/**
+
+🔹 Configuração de Perfis
+
+O projeto possui diferentes profiles para ambientes:
+
+application-dev.properties → ambiente de desenvolvimento
+
+application-prod.properties → ambiente de produção
+
+Você pode alternar o profile usando:
+
+# Rodando com profile dev
+java -jar target/api.jar --spring.profiles.active=dev
+
+🔹 Testes Automatizados
+
+Repository Tests → executados com banco real em profile isolado
+
+Controller Tests → executados com MockMvc + JacksonTester
+
+Execute todos os testes com:
+
+mvn test
+
+🔹 Endpoints Importantes
+
+Documentação interativa com Swagger:
+
+👉 http://localhost:8080/swagger-ui/index.html
+
+Exemplos de endpoints principais:
+
+Recurso	Método	Endpoint
+Logar Usuario   	POST /login
+Cadastrar Usuario	POST	/cadastrar
+Médicos	GET/POST	/medicos
+Pacientes	GET/POST	/pacientes
+Consultas	GET/POST/PUT/DELETE	/consultas
+👨‍💻 Autor
+
+```
+Matheus Martins - Desenvolvedor Java & Spring Boot
+
+Email: mtz.martinss03@gmail.com
+
+LinkedIn: linkedin.com/in/martnsdeveloper
+```
+
+
